# notes

./: .env  .gitignore  README.md  me.blq.notes.json  meson.build
data/: me.blq.notes.appdata.xml.in  me.blq.notes.desktop.in  me.blq.notes.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  main.vala  meson.build  notes.gresource.xml
src/css/: style.css
src/gtk/: shortcuts-window.ui
src/js/: editor.html  tinymce.min.js  trix.css
src/models/: db.vala  note.vala  notebook.vala  state.vala
src/util/: debounce.vala  dirs.vala
src/widgets/: edit_notebooks_dialog.vala  editor.vala  move_note_dialog.vala  note_context_menu.vala  note_menu.vala  notebook_selection_menu.vala  rich_text_editor.vala  side_bar.vala  window.vala
